Donor has multiple errors resuming a shard split in the blocking state

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A number of issues identified by implementing shard split stepdown passthroughs:

      • Waiting for recipient nodes to reach block timestamp doesn't work because no recipient nodes are listed in local members after applying the split config
      • Similarly, we attempt to rebuild a recipient connection string after a split config has been installed, which is impossible since the recipient nodes have been removed from the local member list
      • Installing a split config on top of a pre-existing split config may result in strange replication errors ("installed the config, but unable to get majority commitment")

            Assignee:
            Matt Broadstone
            Reporter:
            Matt Broadstone
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: