SERVER-66338 Skip blocking steps if split config already applied